<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/criteria_precondition_wrapper"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/precondition_time_wrapper"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/precondition_time_begin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/precondition_time_begin"/>

        <TextView
            android:id="@+id/precondition_time_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_below="@+id/precondition_time_begin_text"
            android:text="for "/>

        <EditText
            android:id="@+id/precondition_time_duration_edit"
            android:layout_width="60dp"
            android:paddingTop="5dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/precondition_time_begin_text"
            android:layout_toEndOf="@+id/precondition_time_duration"
            android:hint="Time"
            android:inputType="number"/>

        <TextView
            android:id="@+id/precondition_time_duration_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_below="@+id/precondition_time_begin_text"
            android:layout_toEndOf="@+id/precondition_time_duration_edit"
            android:text=" minutes"/>

        <Button
            android:id="@+id/precondition_time_select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/precondition_time_begin_text"
            android:layout_marginTop="0dp"
            android:layout_alignParentEnd="true"
            android:text="@string/choose_date"/>

        <TextView
            android:id="@+id/precondition_time_spinner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:layout_below="@+id/precondition_time_select_button"
            android:text="@string/precondition_time_should"/>

        <Spinner
            android:id="@+id/precondition_time_repeat_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:layout_toEndOf="@+id/precondition_time_spinner_text"
            android:layout_below="@+id/precondition_time_select_button"/>

        <RelativeLayout
            android:id="@+id/precondition_time_end_wrapper"
            android:layout_below="@+id/precondition_time_repeat_spinner"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/precondition_time_end_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precondition_time_end"/>

            <Button
                android:id="@+id/precondition_time_end_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/precondition_time_end_text"
                android:text="@string/choose_end_date"/>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>