<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true" android:focusableInTouchMode="true"
        android:padding="@dimen/abc_action_bar_content_inset_material" >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">

            <net.pherth.android.emoji_library.EmojiEditText
                android:id="@+id/user_firstname_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/first_name"
                android:textColor="@android:color/black"
                android:inputType="textCapSentences" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">

            <net.pherth.android.emoji_library.EmojiEditText
                android:id="@+id/user_lastname_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/last_name"
                android:textColor="@android:color/black"
                android:inputType="textCapSentences" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">

            <net.pherth.android.emoji_library.EmojiEditText
                android:id="@+id/user_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/email"
                android:textColor="@android:color/black"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/user_gender_wrapper">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/gender"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <Spinner
                android:id="@+id/user_gender_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/birthday"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/user_birthdate_display"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/user_birthdate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_date"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/location"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/user_location_display"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/user_location_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_location"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_level_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Level"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:id="@+id/user_current_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_level_text"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center" />

            <SeekBar
                android:id="@+id/user_level_seekbar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_current_level"
                android:max="24"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/task_delete_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_delete_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_action_delete_white_24"
                android:drawableEnd="@drawable/ic_action_delete_white_24"
                android:text="@string/action_delete"
                android:textColor="@color/white" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>