<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/availability_wrapper"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/available_location_wrapper"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/available_location_begin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/available_location_begin"/>

        <TextView
            android:id="@+id/available_time_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_below="@+id/available_location_begin_text"
            android:text="less than "/>

        <EditText
            android:id="@+id/available_location_distance_edit"
            android:layout_width="60dp"
            android:paddingTop="5dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/available_location_begin_text"
            android:layout_toEndOf="@+id/available_time_duration"
            android:hint="Dist"
            android:inputType="number"/>

        <TextView
            android:id="@+id/precondition_time_duration_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_below="@+id/available_location_begin_text"
            android:layout_toEndOf="@+id/available_location_distance_edit"
            android:text="@string/available_location_suffix"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/available_profile_wrapper"
        android:layout_width="wrap_content"
        android:paddingTop="10dp"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/available_profile_begin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/available_profile_begin"/>

        <com.edmodo.rangebar.RangeBar
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/available_level_range"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/available_profile_begin_text"
            android:layout_marginTop="8dp"
            custom:tickCount="25"
            custom:thumbColorNormal="@color/colorAccent"
            custom:thumbColorPressed="@color/colorAccent"
            custom:connectingLineColor="@color/colorAccent"
            />
        
    </RelativeLayout>

</LinearLayout>